# atvr4samsung

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build-constraints.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  tests.yml
deploy/: atvr4samsung-deploy  compose.yaml  config.example.yaml
docs/: hld.md  lld.md  operations.md
scripts/: build.sh  container_bundle.py  delete_release.py  install.sh  installer_asset_verifier.py  prune_tags.py  release_assets.py  release_decision.py  verify_artifacts.py
src/atvr4samsung/: __init__.py  app.py  authorization.py  config.example.yaml  config.py  pairing_window.py
src/atvr4samsung/bridge/: __init__.py  gestures.py  keymap.py
src/atvr4samsung/companion/: __init__.py  discovery.py  dispatch.py  relay.py  repeater.py  server.py
src/atvr4samsung/companion/protocol/: __init__.py  appletv.py  atomic_io.py  auth.py  chacha20.py  enums.py  framing.py  guardrails.py  identity.py  identity_reset.py  keyed_archiver.py  opack.py  paired_clients.py  pairing_state.py  server_identity.py  support.py  tlv8.py
src/atvr4samsung/samsung/: __init__.py  client.py  logging_safety.py  trust.py
systemd/: atvr4samsung.service
tests/: _deployment_test_support.py  _installer_test_support.py  test_atomic_io.py  test_auth_phase_replay.py  test_cli.py  test_config.py  test_container_contract.py  test_container_deploy.py  test_delete_release.py  test_discovery.py  test_dispatch.py  test_dispatch_state.py  test_gestures.py  test_hardening_integration.py  test_hidc_siri_and_events.py  test_hold_dispatch.py  test_identity_reset.py  test_keymap.py  test_live_revocation.py  test_media_control.py  test_pair_verify.py  test_paired_clients.py  test_pairing_state_transaction.py  test_pairing_window.py  test_pin.py  test_pipx_lock_integration.py  test_protocol_guardrails.py  test_prune_tags.py  test_relay.py  test_release_decision.py  test_repeater.py  test_rti_text.py  test_samsung_client.py  test_samsung_tls.py  test_secure_release_install.py  test_server_identity.py  test_session_isolation.py  test_unpair_clear_all.py  test_volume_hold_dispatch.py
